--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
     <script src="dist/js/libs/modernizr-custom.min.js"></script>
     <script src="dist/js/ModernizrAu.js"></script>
   </head>
-  <body class="1">
+  <body>
     <!-- =========================================================================-->
     <!-- SVG sprites  START-->
     <div class="symbols_svg hide"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0" style="position:absolute">
@@ -53,7 +53,7 @@
     </div>
     <!-- SVG sprites  END  !!-->
     <!-- =========================================================================-->
-    <div class="page_wrap cf login_page">
+    <div data-current="" class="page_wrap cf login_page">
       <main class="login_wrapper">
         <div class="inner-table">
           <div class="inner-tablecell">
