--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
       <div class="page_container">
         <nav class="page_menu">
           <ul class="cf lis-n">
-            <li data-menu="index" class="page_menu-item"><a href="">
+            <li data-menu="index" class="page_menu-item"><a href="./">
                 <div class="icon"><i class="fas fa-home"></i></div>
                 <div class="txt">首頁</div></a></li>
-            <li data-menu="diary" class="page_menu-item"><a href="">
+            <li data-menu="diary" class="page_menu-item"><a href="diary_add.html">
                 <div class="icon"><i class="fas fa-file-alt"></i></div>
                 <div class="txt">日誌</div></a></li>
-            <li data-menu="feedback" class="page_menu-item"><a href="">
+            <li data-menu="feedback" class="page_menu-item"><a href="feedback.html">
                 <div class="icon">
                   <svg class="icons-feelback">
                     <use xlink:href="#svg-feelback"></use>
                   </svg>
                 </div>
                 <div class="txt">回饋</div></a></li>
-            <li data-menu="vote" class="page_menu-item"><a href="">
+            <li data-menu="vote" class="page_menu-item"><a href="vote.html">
                 <div class="icon">
                   <svg class="icons-vote">
                     <use xlink:href="#svg-vote"></use>
                   </svg>
                 </div>
                 <div class="txt">票選</div></a></li>
-            <li data-menu="config" class="page_menu-item"><a href="">
+            <li data-menu="config" class="page_menu-item"><a href="config.html">
                 <div class="icon"><i class="fas fa-cog"></i></div>
                 <div class="txt">管理</div></a></li>
           </ul>
