--- a/login.html
+++ b/login.html
@@ -84,6 +84,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="dist/js/libs/jquery.min.js"><\/script>')</script>
     <script src="dist/js/libs/plugin_mix.js"></script>
+    <script src="dist/plugin/jquery-ui.js"></script>
     <!-- 動態效果-->
     <script src="dist/plugin/greensock/TweenMax.min.js"></script>
     <script src="dist/plugin/marka/marka.js"></script>
@@ -91,7 +92,7 @@
     <script src="dist/plugin/jquery-validation/jquery.validate.js"></script>
     <script src="dist/plugin/jquery-validation/additional-methods.js"></script>
     <script src="dist/plugin/jquery-validation/localization/messages_zh_TW.js"></script>
-    <script src="dist/plugin/jquery-ui.js"></script>
+    <script src="dist/plugin/multiple-select.js"></script>
     <script src="dist/js/popper.min.js"></script>
     <script src="dist/js/tooltip.js"></script>
     <script src="dist/js/au.js"></script>
