日誌內容頁

--- a/diary_add.html
+++ b/diary_add.html
@@ -219,8 +219,10 @@
                     <div class="form-row">
                       <div class="form-group col">
                         <div class="row">
-                          <button id="temporaryBtn" type="button" class="btn btn-success">儲存</button>
-                          <button id="submitBtn" type="submit" class="btn blue">送出</button>
+                          <div class="form-btns">
+                            <button id="temporaryBtn" type="button" class="btn btn-success">儲存</button>
+                            <button id="submitBtn" type="submit" class="btn blue">送出</button>
+                          </div>
                         </div>
                       </div>
                     </div>
