--- a/index.html
+++ b/index.html
@@ -253,12 +253,7 @@
                           <div class="diary-txt pr-2">
                             <div class="diary-category mb-1">生活學習</div>
                             <div class="diary-brief">
-                              <!-- 文章，取前150個字元-->滾滾長江東逝水，浪花淘盡英雄。ㄒ
-                              是非成敗轉頭空。
-                              青山依舊在，幾度夕陽紅。
-                              白髮漁樵江渚上，慣看秋月春風。
-                              一壺濁酒喜相逢。
-                              古今多少事，都付笑談中。
+                              <!-- 文章，取前150個字元-->滾滾長江東逝水
                             </div>
                           </div>
                           <div class="diary-pic">
@@ -271,7 +266,7 @@
                   <!-- 文章送出（無回饋、無提報通過）-->
                   <!-- data-state=""-->
                   <!-- 沒有圖片-->
-                  <li id="diary_tw000223_2018051001" data-state="" class="diary_item"><a href="" class="inner d-flex">
+                  <li id="diary_tw000223_2018051001" data-state="" class="diary_item"><a href="diary_content.html" class="inner d-flex">
                       <div class="inner-s">
                         <div class="diary-date">2018-05-11</div>
                         <div class="diary-state"></div>
@@ -296,7 +291,7 @@
                   <!-- 文章送出（有回饋、有提報通過）-->
                   <!-- data-state="feedback,heart"-->
                   <!-- 沒有圖片-->
-                  <li id="diary_tw000223_2018051101" data-state="feedback,heart" class="diary_item"><a href="" class="inner d-flex">
+                  <li id="diary_tw000223_2018051101" data-state="feedback,heart" class="diary_item"><a href="diary_content.html" class="inner d-flex">
                       <div class="inner-s">
                         <div class="diary-date">2018-05-11</div>
                         <div class="diary-state"></div>
@@ -321,7 +316,7 @@
                   <!-- 文章送出（有回饋、有提報通過）-->
                   <!-- data-state="feedback,heart"-->
                   <!-- 有圖片-->
-                  <li id="diary_tw000223_2018051101" data-state="feedback,heart" class="diary_item"><a href="" class="inner d-flex">
+                  <li id="diary_tw000223_2018051101" data-state="feedback,heart" class="diary_item"><a href="diary_content.html" class="inner d-flex">
                       <div class="inner-s">
                         <div class="diary-date">2018-05-11</div>
                         <div class="diary-state"></div>
@@ -349,7 +344,7 @@
                   <!-- 文章送出（有回饋、無提報通過）-->
                   <!-- data-state="feedback"-->
                   <!-- 有圖片-->
-                  <li id="diary_tw000223_2018051101" data-state="feedback" class="diary_item"><a href="" class="inner d-flex">
+                  <li id="diary_tw000223_2018051101" data-state="feedback" class="diary_item"><a href="diary_content.html" class="inner d-flex">
                       <div class="inner-s">
                         <div class="diary-date">2018-05-11</div>
                         <div class="diary-state"></div>
