--- a/diary_content.html
+++ b/diary_content.html
@@ -16,6 +16,8 @@
     <script src="dist/fontawesome/js/fontawesome-all.js"></script>
     <!-- marka css (icon transformation)-->
     <link rel="stylesheet" href="dist/plugin/marka/marka.css">
+    <!-- custom scrollbar-->
+    <link rel="stylesheet" href="dist/plugin/jquery.mCustomScrollbar.css">
     <!-- style-->
     <link rel="stylesheet" href="dist/css/set2.css">
     <link rel="stylesheet" href="dist/css/style.css">
@@ -212,7 +214,7 @@
                               <div class="inner d-md-flex">
                                 <div class="inner-l">
                                   <div class="pic okuser-photo">
-                                    <!-- 載入自己的照片--><img src="dist/images/photo.jpg" alt="">
+                                    <!-- 載入自己的照片--><img src="dist/images/temp/user_photo-s.jpg" alt="">
                                   </div>
                                 </div>
                                 <div class="inner-r">
@@ -242,7 +244,7 @@
                               <div class="inner d-md-flex">
                                 <div class="inner-l">
                                   <div class="pic okuser-photo">
-                                    <!-- 載入自己的照片--><img src="dist/images/photo.jpg" alt="">
+                                    <!-- 載入自己的照片--><img src="dist/images/temp/user_photo-s.jpg" alt="">
                                   </div>
                                 </div>
                                 <div class="inner-r">
@@ -298,7 +300,10 @@
     <script src="dist/plugin/jquery-validation/jquery.validate.js"></script>
     <script src="dist/plugin/jquery-validation/additional-methods.js"></script>
     <script src="dist/plugin/jquery-validation/localization/messages_zh_TW.js"></script>
+    <!-- 多選-->
     <script src="dist/plugin/multiple-select.js"></script>
+    <!-- custom scrollbar-->
+    <script src="dist/plugin/jquery.mCustomScrollbar.js"></script>
     <script src="dist/js/popper.min.js"></script>
     <script src="dist/js/tooltip.js"></script>
     <script src="dist/js/au.js"></script>
