--- a/login.html
+++ b/login.html
@@ -55,33 +55,41 @@
     </div>
     <!-- SVG sprites  END  !!-->
     <!-- =========================================================================-->
+    <div id="m_nav" class="m_nav"></div>
+    <!-- =========================================================================-->
+    <!-- 手機版個人資訊  START-->
+    <div id="m_user_info" class="m_user_info"></div>
+    <!-- 手機版個人資訊  END  !!-->
+    <!-- =========================================================================-->
     <div data-current="" class="page_wrap cf login_page">
-      <main class="login_wrapper">
-        <div class="inner-table">
-          <div class="inner-tablecell">
-            <div class="logo mb-5">
-              <div class="logo-lg pic"><img src="dist/images/logo.png" alt=""></div>
-            </div>
-            <div class="login_frm">
-              <form id="loginForm" action="">
-                <div class="form-group"><span class="input input--yoshiko control-field">
-                    <input class="input__field input__field--yoshiko form-control" type="text" name="m_id" id="m_id" required />
-                    <label class="input__label input__label--yoshiko" for="m_id">
-                    	<span class="input__label-content input__label-content--yoshiko" data-content="帳號">請輸入帳號</span>
-                    </label></span></div>
-                <div class="form-group"><span class="input input--yoshiko control-field">
-                    <input class="input__field input__field--yoshiko form-control" type="password" name="m_password" id="m_password" required />
-                    <label class="input__label input__label--yoshiko" for="m_password">
-                    	<span class="input__label-content input__label-content--yoshiko" data-content="密碼">請輸入密碼</span>
-                    </label></span></div>
-                <div class="form-group">
-                  <button id="loginBtn" class="btn btn-primary">登入</button><br><a href="" class="forget_pw mt-3 d-block">忘記密碼?</a>
-                </div>
-              </form>
+      <div class="inner">
+        <main class="login_wrapper">
+          <div class="inner-table">
+            <div class="inner-tablecell">
+              <div class="logo mb-5">
+                <div class="logo-lg pic"><img src="dist/images/logo.png" alt=""></div>
+              </div>
+              <div class="login_frm">
+                <form id="loginForm" action="">
+                  <div class="form-group"><span class="input input--yoshiko control-field">
+                      <input class="input__field input__field--yoshiko form-control" type="text" name="m_id" id="m_id" required />
+                      <label class="input__label input__label--yoshiko" for="m_id">
+                      	<span class="input__label-content input__label-content--yoshiko" data-content="帳號">請輸入帳號</span>
+                      </label></span></div>
+                  <div class="form-group"><span class="input input--yoshiko control-field">
+                      <input class="input__field input__field--yoshiko form-control" type="password" name="m_password" id="m_password" required />
+                      <label class="input__label input__label--yoshiko" for="m_password">
+                      	<span class="input__label-content input__label-content--yoshiko" data-content="密碼">請輸入密碼</span>
+                      </label></span></div>
+                  <div class="form-group">
+                    <button id="loginBtn" class="btn btn-primary">登入</button><br><a href="" class="forget_pw mt-3 d-block">忘記密碼?</a>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
-        </div>
-      </main>
+        </main>
+      </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="dist/js/libs/jquery.min.js"><\/script>')</script>
